Fixed some layout issues and created better attend / cancel / maybe options

--- a/src/Piwi/S2p/EventBundle/Resources/private/less/core.less
+++ b/src/Piwi/S2p/EventBundle/Resources/private/less/core.less
@@ -10,6 +10,9 @@ body{
 
 .event-poster {
   margin-bottom: 10px;
+  img {
+    margin: 0 auto;
+  }
 }
 
 .event-label {
@@ -37,6 +40,17 @@ body{
         max-width: 47px;
       }
     }
+  }
+}
+
+.event-attendee {
+  position: relative;
+  .maybe {
+    position: absolute;
+    right: 2px;
+    top: 3px;
+    width: 12px;
+    height: 12px;
   }
 }
 
